# CourseCppBasic

./: CMakeLists.txt  README.md  test1.txt
src/: game.cpp  game.hpp  hello_world.cpp  main.cpp  scores_helper.cpp  scores_helper.hpp
